# jama-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mock_client.py  prompt_templates.md  pyproject.toml  server.py  test_client.py  test_mcp_client.py
.github/: CODEOWNERS
.github/workflows/: codeowners-validator.yml
jama_mcp/: auth.py  server.py
jama_mcp/tests/: test_tools.py
src/jama_mcp_server/: __init__.py  mock_client.py  server.py
src/jama_mcp_server/tests/: test_tools.py
tests/: test_tools.py
