[project]
name = "jama-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "py-jama-rest-client", # Keep the name here
    "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Use tool.uv.sources to point to the py-jama-rest-client dependency
[tool.uv.sources]
py-jama-rest-client = { git = "https://github.com/jamasoftware-ps/py-jama-rest-client.git" }

# Alternatively, use the below source after cloning the above jama repo locally
# py-jama-rest-client = { path = "./py-jama-rest-client", editable = true }


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
# Add parent directory (project root) to pythonpath so pytest can find the jama_mcp package
# Also include current directory for relative imports within tests if needed
pythonpath = [ ".", ".." ]
asyncio_mode = "strict" # Explicitly set asyncio mode

[project.scripts]
jama-mcp-server = "jama_mcp_server.server:main"
